--- a/web-app/css/application.css
+++ b/web-app/css/application.css
@@ -45,15 +45,22 @@ body {
 .title-header {
 	float: left;
 	height: 70px;
-	width: 335px;
-	margin: 0px 0px 0px 85px;
-	padding: 10px 0px 0px 0px;
+	width: 500px;
+	margin: 0px 0px 0px 0px;
+	padding: 10px 0px 0px 110px;
 	font-family: 'Quando', serif;
 	color: #e1dede;
 	font-size: 50px;
-	text-align: center;
+	text-align: left;
 }
 
+#content {
+	float: left;
+	width: 100%;
+	height: 100%;
+	margin: 0px;
+	padding: 20px 20px 20px 110px;
+}
 
 #main-logo {
 	float: right;
